Add Magister.js to projects.

--- a/views/projects.jade
+++ b/views/projects.jade
@@ -11,3 +11,7 @@ block content
 		div.project
 			div.projectTitle simplyHomework
 			div.projectBack(style="background-image: url('/simplyHomework.png');")
+	a(href="http://simplyApps.nl/MagisterJS")
+		div.project
+			div.projectTitle Magister.js
+			div.projectBack(style="background-image: url('/magisterJS.png');")
