--- a/views/main.jade
+++ b/views/main.jade
@@ -13,7 +13,7 @@ html(lang="en")
 		meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
 		link(href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,700", rel="stylesheet", type="text/css")
 
-		script(type="application/javascript").
+		script(type="application/javascript", async).
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -23,7 +23,7 @@ html(lang="en")
 			ga('send', 'pageview');
 
 		block head
-			
+
 	body
 		div.sideBar
 			a(href="/")
