--- a/views/main.jade
+++ b/views/main.jade
@@ -4,7 +4,7 @@ html(lang="en")
 		block title
 			title= "Lieuwe Rooijakkers"
 		block head
-			
+
 		link(rel="stylesheet", href="/css/main.css")
 
 		meta(name="viewport", content="width=device-width, initial-scale = 1.0, maximum-scale = 1.0, user-scalable=no")
@@ -15,7 +15,7 @@ html(lang="en")
 		meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
 		link(href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,700", rel="stylesheet", type="text/css")
 
-		script(type="application/javascript", async).
+		script.
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
