Change images to JPG and optimize them.

--- a/views/projects.jade
+++ b/views/projects.jade
@@ -10,8 +10,8 @@ block content
 	a(href="http://www.simplyHomework.nl/")
 		div.project
 			div.projectTitle simplyHomework
-			div.projectBack(style="background-image: url('/simplyHomework.png');")
+			div.projectBack(style="background-image: url('/simplyHomework.jpg');")
 	a(href="http://simplyApps.nl/MagisterJS")
 		div.project
 			div.projectTitle Magister.js
-			div.projectBack(style="background-image: url('/magisterJS.png');")
+			div.projectBack(style="background-image: url('/magisterJS.jpg');")
