--- a/views/post.jade
+++ b/views/post.jade
@@ -11,3 +11,14 @@ block content
 	h3 #{creation}
 	hr
 	| !{content}
+	hr
+	div#disqus_thread
+
+	script.
+		var disqus_shortname = 'lieuwex';
+		var disqus_identifier = '#{title}';
+		(function() {
+			var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+			dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+			(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+		})();
