--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	font-family: "Roboto", sans-serif;
+	font-family: sans-serif;
 
 	padding: 30px;
 }
