--- a/views/me.jade
+++ b/views/me.jade
@@ -46,3 +46,6 @@ block content
 		if githubDate
 			<br><br>
 			| My last <i>public</i> activity on GitHub was on <b>#{githubDate}</b>.
+		if lastGame
+			<br><br>
+			| My last ranked game on League of Legends was with <b>#{lastGame.champName}</b>, details of the match can be found <a href="#{lastGame.url}">here</a>.
