Improve League data in /me.

--- a/views/me.jade
+++ b/views/me.jade
@@ -48,4 +48,4 @@ block content
 			| My last <i>public</i> activity on GitHub was on <b>#{githubDate}</b>.
 		if lastGame
 			<br><br>
-			| My last ranked game on League of Legends was with <b>#{lastGame.champName}</b>, details of the match can be found <a href="#{lastGame.url}">here</a>.
+			| My last game on League of Legends was with <b>#{lastGame.champName}</b>, details of the match can be found <a href="#{lastGame.url}">here</a>.
