Add keys and clicks from WhatPulse to /me.

--- a/views/me.jade
+++ b/views/me.jade
@@ -49,3 +49,7 @@ block content
 		if lastGame
 			<br><br>
 			| My last game on League of Legends was with <b>#{lastGame.champName}</b>, details of the match can be found <a href="#{lastGame.url}">here</a>.
+
+		if keys && clicks
+			<br><br>
+			| I currently have pressed <b>#{keys}</b> keys and clicked <b>#{clicks}</b> times. More details <a href="http://whatpulse.org/lieuwex/computer/Beneden">here</a>.
