--- a/views/main.jade
+++ b/views/main.jade
@@ -14,6 +14,8 @@ html(lang="en")
 		meta(name="apple-mobile-web-app-status-bar-style", content="black")
 		meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
 
+		meta(name="description", content="Lieuwe Rooijakkers' Blog. Web front- and back-end developer.")
+
 		script.
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
