Add error handeling to lastGame champ fetching.

--- a/views/me.jade
+++ b/views/me.jade
@@ -48,7 +48,10 @@ block content
 			| My last <i>public</i> activity on GitHub was on <b>#{githubDate}</b>.
 		if lastGame
 			<br><br>
-			| My last game on League of Legends was with <b>#{lastGame.champName}</b>, details of the match can be found <a href="#{lastGame.url}">here</a>.
+			if lastGame.champName
+				| My last game on League of Legends was with <b>#{lastGame.champName}</b>, details of the match can be found <a href="#{lastGame.url}">here</a>.
+			else
+				| Details of my last match on League of Legends can be found <a href="#{lastGame.url}">here</a>.
 
 		if keys && clicks
 			<br><br>
