Add microdata and author rich snippets.

--- a/views/main.jade
+++ b/views/main.jade
@@ -45,3 +45,5 @@ html(lang="en")
 				a(href="mailto:lieuwerooijakkers@gmail.com", target="_blank"): div Mail&nbsp;
 		div.content
 			block content
+
+		a(href="https://plus.google.com/+LieuweRooijakkers", rel="publisher")
