--- a/views/resume.jade
+++ b/views/resume.jade
@@ -15,7 +15,7 @@ block content
 			tr
 				td Education
 				td.
-					<b>2010 - Now</b>: Adelbert College Wassenaar<br>
+					<b>2010 - Now</b>: Adelbert College Wassenaar VWO<br>
 			tr
 				td Skills
 				td.
