--- a/views/main.jade
+++ b/views/main.jade
@@ -43,6 +43,7 @@ html(lang="en")
 				a(href="https://plus.google.com/+LieuweRooijakkers", target="_blank"): div Google+&nbsp;
 				a(href="https://www.github.com/Lieuwex", target="_blank"): div Github&nbsp;
 				a(href="mailto:lieuwerooijakkers@gmail.com", target="_blank"): div Mail&nbsp;
+				a(href="/pgp", target="_blank"): div PGP key&nbsp;
 		div.content
 			block content
 
