fix typo in /me
tysfm @tomsmeding

--- a/views/me.jade
+++ b/views/me.jade
@@ -39,7 +39,7 @@ block content
 		|	It looks like I'm 
 
 		if nowPlaying
-			| currently listening to <b>#{nowPlaying.name}</b> by <b>#{nowPlaying.artist["#text"]}</b>, I tend to listen to music a lot, so that's not too suprsising.
+			| currently listening to <b>#{nowPlaying.name}</b> by <b>#{nowPlaying.artist["#text"]}</b>, I tend to listen to music a lot, so that's not too surprising.
 		else
 			| not listening to anything at the moment.
 
