--- a/views/post.jade
+++ b/views/post.jade
@@ -2,6 +2,7 @@ extends ./main.jade
 
 block head
 	link(rel="stylesheet", href="/css/post.css")
+	link(rel="stylesheet", href="/css/hljs.css")
 
 block title
 	title= "Lieuwe Rooijakkers | " + title
