--- a/css/post.css
+++ b/css/post.css
@@ -1,24 +1,37 @@
 div.content {
-	line-height: 1;
 	overflow-y: hidden;
 }
 
 div.content hr {
+	line-height: 1;
 	border: 0;
 	border-bottom: 1px black solid;
 }
 
 div.content h1 {
+	line-height: 1;
 	font-weight: 100;
-	font-size: 3.5em;
+	font-size: 2.5em;
 	margin: 0;
 	display: inline;
 }
 
 div.content h3 {
+	line-height: 1;
 	font-weight: 100;
 	float: right;
 
 	margin: 0;
-	margin-top: 35px;
+	margin-top: 25px;
+}
+
+div.content img {
+	width: 100%;
+}
+
+div.content pre {
+	border: 1px gray solid;
+	padding: 10px;
+	overflow: scroll;
+	-webkit-overflow-scrolling: touch;
 }
