update domain everywhere

--- a/views/stats.jade
+++ b/views/stats.jade
@@ -4,6 +4,6 @@ block title
 	title= "Lieuwe Rooijakkers | Short Link Stats"
 
 block content
-	| <b>short</b>: http://www.lieuwex.me/#{short}<br>
+	| <b>short</b>: http://www.lieuwe.xyz/#{short}<br>
 	| <b>long</b>: #{long}<br>
 	| <b>clicks</b>: #{clicks}<br>
