--- a/views/me.jade
+++ b/views/me.jade
@@ -17,7 +17,7 @@ block head
 			"email": "mailto:lieuwerooijakkers@gmail.com",
 			"image": "https://www.gravatar.com/avatar/763664ead00ca1ed8e12db1d5ad703c5?s=175&d=identicon&r=PG",
 			"jobTitle": "Student",
-			"url": "http://www.lieuwex.me/",
+			"url": "http://www.lieuwe.xyz/",
 			"worksFor": {
 				"@type": "Organization",
 				"name": "simplyApps",
