update simplyHomework image

--- a/views/projects.jade
+++ b/views/projects.jade
@@ -10,7 +10,7 @@ block content
 	a(href="http://www.simplyHomework.nl/")
 		div.project
 			div.projectTitle simplyHomework
-			div.projectBack(style="background-image: url('/simplyHomework.jpg');")
+			div.projectBack(style="background-image: url('/simplyHomework.png'); background-position: center top;")
 	a(href="http://simplyApps.nl/MagisterJS")
 		div.project
 			div.projectTitle Magister.js
