use some cool html5 tags

--- a/views/main.jade
+++ b/views/main.jade
@@ -26,25 +26,27 @@ html(lang="en")
 			ga('send', 'pageview');
 
 	body
-		div.sideBar
-			a(href="/")
-				div.siteHeader
-					h1
-						| &nbsp;Lieuwe&nbsp;
-						br
-						| &nbsp;Rooijakkers&nbsp;
-			div.navButtons
-				a(href="/me"): div About&nbsp;
-				a(href="/resume"): div Résumé&nbsp;
-				a(href="/projects"): div Projects&nbsp;
-				br
-				a(href="https://www.facebook.com/lieuwe.rooijakkers", target="_blank"): div Facebook&nbsp;
-				a(href="https://www.twitter.com/LieuweR", target="_blank"): div Twitter&nbsp;
-				a(href="https://plus.google.com/+LieuweRooijakkers", target="_blank"): div Google+&nbsp;
-				a(href="https://www.github.com/Lieuwex", target="_blank"): div Github&nbsp;
-				a(href="mailto:lieuwerooijakkers@gmail.com", target="_blank"): div Mail&nbsp;
-				a(href="/pgp", target="_blank"): div PGP key&nbsp;
-		div.content
-			block content
+		nav
+			div.sideBar
+				a(href="/")
+					div.siteHeader
+						h1
+							| &nbsp;Lieuwe&nbsp;
+							br
+							| &nbsp;Rooijakkers&nbsp;
+				div.navButtons
+					a(href="/me"): div About&nbsp;
+					a(href="/resume"): div Résumé&nbsp;
+					a(href="/projects"): div Projects&nbsp;
+					br
+					a(href="https://www.facebook.com/lieuwe.rooijakkers", target="_blank"): div Facebook&nbsp;
+					a(href="https://www.twitter.com/LieuweR", target="_blank"): div Twitter&nbsp;
+					a(href="https://plus.google.com/+LieuweRooijakkers", target="_blank"): div Google+&nbsp;
+					a(href="https://www.github.com/Lieuwex", target="_blank"): div Github&nbsp;
+					a(href="mailto:lieuwerooijakkers@gmail.com", target="_blank"): div Mail&nbsp;
+					a(href="/pgp", target="_blank"): div PGP key&nbsp;
+		section
+			div.content
+				block content
 
 		a(href="https://plus.google.com/+LieuweRooijakkers", rel="publisher")
