--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,10 @@ div.siteHeader > h1 {
 
 	background-color: black;
 	color: white;
+
+	font-size: 2em;
+	-webkit-margin-before: 0.67em;
+	-webkit-margin-after: 0.67em;
 }
 
 div.navButtons > a > div {
