--- a/views/main.jade
+++ b/views/main.jade
@@ -44,6 +44,7 @@ html(lang="en")
 					a(href="https://plus.google.com/+LieuweRooijakkers", target="_blank"): div Google+&nbsp;
 					a(href="https://www.github.com/Lieuwex", target="_blank"): div Github&nbsp;
 					a(href="https://keybase.io/lieuwer", target="_blank"): div Keybase&nbsp;
+					a(href="https://matrix.to/#/@lieuwex:matrix.org", target="_blank"): div Matrix&nbsp;
 					a(href="mailto:lieuwerooijakkers@gmail.com", target="_blank"): div Mail&nbsp;
 					a(href="/pgp", target="_blank"): div PGP key&nbsp;
 		section
