add university to resume

--- a/views/resume.jade
+++ b/views/resume.jade
@@ -15,7 +15,8 @@ block content
 			tr
 				td Education
 				td.
-					<b>2010 - Now</b>: Adelbert College Wassenaar VWO<br>
+					<b>2010 - 2017</b>: Adelbert College Wassenaar VWO<br>
+					<b>2017 - Now</b>: Leiden University Bachelor Computer Science<br>
 			tr
 				td Skills
 				td.
