projects: add ceramicarts.nl

--- a/views/projects.jade
+++ b/views/projects.jade
@@ -7,6 +7,10 @@ block title
 	title= "Lieuwe Rooijakkers | Projects"
 
 block content
+	a(href="http://www.ceramicarts.nl/")
+		div.project
+			div.projectTitle Gerda van den Bergh-Arents
+			div.projectBack(style="background-image: url('/ceramicarts.png'); background-position: center top;")
 	a(href="http://www.simplyHomework.nl/")
 		div.project
 			div.projectTitle simplyHomework
