projects: update dead links

--- a/views/projects.jade
+++ b/views/projects.jade
@@ -11,11 +11,11 @@ block content
 		div.project
 			div.projectTitle Gerda van den Bergh-Arents
 			div.projectBack(style="background-image: url('/ceramicarts.png'); background-position: center top;")
-	a(href="http://www.simplyHomework.nl/")
+	a(href="https://github.com/simplyGits/simplyHomework")
 		div.project
 			div.projectTitle simplyHomework
 			div.projectBack(style="background-image: url('/simplyHomework.png'); background-position: center top;")
-	a(href="http://simplyApps.nl/MagisterJS")
+	a(href="http://simplygits.github.io/MagisterJS/")
 		div.project
 			div.projectTitle Magister.js
 			div.projectBack(style="background-image: url('/magisterJS.jpg');")
