--- a/views/main.jade
+++ b/views/main.jade
@@ -49,6 +49,8 @@ html(lang="en")
 					a(href="/pgp", target="_blank"): div PGP key&nbsp;
 		section
 			div.content
+				h1.pageHeader
+					block pageHeader
 				block content
 
 		a(href="https://plus.google.com/+LieuweRooijakkers", rel="publisher")
