--- a/views/projects.jade
+++ b/views/projects.jade
@@ -6,6 +6,9 @@ block head
 block title
 	title= "Lieuwe Rooijakkers | Projects"
 
+block pageHeader
+	| Projects
+
 block content
 	a(href="http://www.ceramicarts.nl/")
 		div.project
