me: make best typeracer wpm bold

--- a/views/me.jade
+++ b/views/me.jade
@@ -52,7 +52,7 @@ block content
 
 		if bestwpm && averagewpm
 			<br><br>
-			| My average WPM of my last 10 races on <a href="http://play.typeracer.com/">TypeRacer</a> is #{averagewpm}, while my best is #{bestwpm}.
+			| My average WPM of my last 10 races on <a href="http://play.typeracer.com/">TypeRacer</a> is #{averagewpm}, while my best is <b>#{bestwpm}</b>.
 
 		if keys && clicks
 			<br><br>
