--- a/views/resume.jade
+++ b/views/resume.jade
@@ -18,21 +18,23 @@ block content
 			tr
 				td Education
 				td.
-					<b>2010 - 2017</b>: Adelbert College Wassenaar VWO<br>
 					<b>2017 - Now</b>: Leiden University Bachelor Computer Science<br>
+					<b>2010 - 2017</b>: Adelbert College Wassenaar VWO<br>
 			tr
 				td Skills
 				td.
 					Front- and back-end development in:<br>
+						- JavaScript<br>
+						- Go<br>
+						- C<br>
+						- C++<br>
+						- Shell<br>
+						- CoffeeScript<br>
 						- C#<br>
 						- Python<br>
-						- GO<br>
-						- JavaScript<br>
-						- CoffeeScript<br>
-						- C(++)<br>
 					<br>
 					Using frameworks and tools such as:<br>
-						- .NET<br>
+						- Node.js<br>
 						- Meteor<br>
 						- MongoDB<br>
-						- Node.js<br>
+						- .NET<br>
