--- a/views/main.jade
+++ b/views/main.jade
@@ -29,6 +29,7 @@ html(lang="en")
 		nav
 			div.sideBar
 				a(href="/")
+					img#headerPhoto(src="https://www.gravatar.com/avatar/763664ead00ca1ed8e12db1d5ad703c5?s=175&amp;d=identicon&amp;r=PG")
 					div.siteHeader
 						h1
 							| &nbsp;Lieuwe&nbsp;
