--- a/css/main.css
+++ b/css/main.css
@@ -41,15 +41,19 @@ div.sideBar {
 	padding: 30px;
 }
 
-div.siteHeader {
-	text-align: right;
-	border: 1px white solid;
-}
-div.siteHeader:hover {
-	border-color: black;
+img#headerPhoto {
+	position: absolute;
+	top: 30px;
+	right: 30px;
+	z-index: -1;
 }
 
-div.siteHeader:hover > h1 {
+div.siteHeader {
+	margin-top: 115px;
+	text-align: right;
+}
+
+a:hover > div.siteHeader > h1 {
 	background-color: white;
 	color: black;
 }
@@ -99,6 +103,14 @@ div.content {
 		width: 100%;
 		padding: 0px;
 		margin-bottom: 30px;
+	}
+
+	img#headerPhoto {
+		display: none;
+	}
+
+	div.siteHeader {
+		margin-top: 0px;
 	}
 
 	div.content {
