--- a/views/me.jade
+++ b/views/me.jade
@@ -44,10 +44,10 @@ block content
 			<br><br>
 			| My last <i>public</i> activity on GitHub was on <b>#{githubDate}</b>.
 
-		if bestwpm && averagewpm
+		if typeRacer
 			<br><br>
-			| My average WPM of my last 10 races on <a href="http://play.typeracer.com/">TypeRacer</a> is #{averagewpm}, while my best is <b>#{bestwpm}</b>.
+			| My average WPM of my last 10 races on <a href="http://play.typeracer.com/">TypeRacer</a> is #{typeRacer.averagewpm}, while my best is <b>#{typeRacer.bestwpm}</b>.
 
-		if keys && clicks
+		if whatpulse
 			<br><br>
-			| I currently have pressed <b>#{keys}</b> keys and clicked <b>#{clicks}</b> times. More details <a href="http://whatpulse.org/lieuwex/computer/Beneden">here</a>.
+			| I currently have pressed <b>#{whatpulse.keys}</b> keys and clicked <b>#{whatpulse.clicks}</b> times. More details <a href="http://whatpulse.org/lieuwex/computer/Beneden">here</a>.
