--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,8 @@
+div.me {
+	margin-top: 5px;
+	margin-bottom: 25px;
+}
+
 div.content > hr {
 	border: 0;
 	border-bottom: 1px black solid;
@@ -6,7 +11,7 @@ div.content > hr {
 div.post {
 	border: 1px black solid;
 	padding: 15px;
-	
+
 	color: black !important;
 	background-color: white;
 }
