--- a/css/main.css
+++ b/css/main.css
@@ -2,21 +2,22 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font-family: sans-serif;
-
 	padding: 30px;
 }
 
-*::selection {
-	background: #00B079;
-	color: white;
+::selection {
+	background: #00b079;
+	color: #fff;
 }
-*::-moz-selection {
-	background: #00B079;
-	color: white;
+
+::-moz-selection {
+	background: #00b079;
+	color: #fff;
 }
-*::-webkit-selection {
-	background: #00B079;
-	color: white;
+
+::-webkit-selection {
+	background: #00b079;
+	color: #fff;
 }
 
 a {
@@ -34,11 +35,11 @@ a {
 }
 
 div.sideBar {
-	position: fixed;
-	right: 0;
+	position: absolute;
 	top: 0;
 	bottom: 0;
-	padding: 30px;
+	left: calc(35vh + 10px);
+	width: 100%;
 }
 
 img#headerPhoto {
@@ -53,55 +54,87 @@ div.siteHeader {
 	text-align: right;
 }
 
-a:hover > div.siteHeader > h1 {
-	background-color: white;
-	color: black;
+a:hover>div.siteHeader>h1 {
+	background-color: #fff;
+	color: #000;
 }
 
-div.siteHeader > h1 {
+div.siteHeader>h1 {
 	font-weight: 300;
 	text-transform: uppercase;
 	margin-top: 0;
 	display: inline;
-
-	background-color: black;
-	color: white;
-
+	background-color: #000;
+	color: #fff;
 	font-size: 2em;
-	-webkit-margin-before: 0.67em;
-	-webkit-margin-after: 0.67em;
+	-webkit-margin-before: .67em;
+	-webkit-margin-after: .67em;
 }
 
-div.navButtons > a > div {
+div.navButtons>a>div {
 	margin-top: 4px;
-	background-color: black;
-	color: white;
+	background-color: #000;
+	color: #fff;
 	padding-top: 5px;
 	padding-bottom: 5px;
-	text-align: right;
-	border: 1px white solid;
+	/* text-align:right; */;
+	/* border:1px #fff solid; */;
+	padding: 5px;
 }
 
-div.navButtons > a > div:hover {
-	background-color: white;
-	color: black;
-	border-color: black;
+div.navButtons>a>div:hover {
+	background-color: #fff;
+	color: #000;
+	border-color: #000;
+}
+
+div#bigHeader {
+	width: auto;
+	background-color: #000;
+	color: #fff;
+	margin-left: -38px;
+	margin-top: -38px;
+	margin-right: -38px;
+	height: 35vh;
+	position: relative;
+	overflow: hidden;
+	min-height: 425px;
+}
+
+div#headerPhoto {
+	background-image: url(https://www.gravatar.com/avatar/763664ead00ca1ed8e12db1d5ad703c5?s=500&amp;d=identicon&amp;r=PG);
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	width: 35vh;
+	background-size: cover;
+	background-position: center;
+}
+
+#name {
+	position: absolute;
+	text-transform: uppercase;
+	position: absolute;
+	bottom: -16px;
+	left: 40px;
+	font-size: 4em;
 }
 
 div.content {
-	width: calc(100% - 250px);
+	width: 100%;
 	overflow-x: hidden;
 }
 
 @media only screen and (max-width: 760px) {
 	body {
-		padding-top: 0;
+		padding-top:0;
 	}
 
 	div.sideBar {
 		position: relative;
 		width: 100%;
-		padding: 0px;
+		padding: 0;
 		margin-bottom: 30px;
 	}
 
@@ -110,7 +143,7 @@ div.content {
 	}
 
 	div.siteHeader {
-		margin-top: 0px;
+		margin-top: 0;
 	}
 
 	div.content {
