--- a/views/main.jade
+++ b/views/main.jade
@@ -26,19 +26,15 @@ html(lang="en")
 			ga('send', 'pageview');
 
 	body
+		div#bigHeader
+			div#headerPhoto
+			div#name Lieuwe Rooijakkers
 		nav
 			div.sideBar
-				a(href="/")
-					img#headerPhoto(src="https://www.gravatar.com/avatar/763664ead00ca1ed8e12db1d5ad703c5?s=150&amp;d=identicon&amp;r=PG")
-					div.siteHeader
-						h1
-							| &nbsp;Lieuwe&nbsp;
-							br
-							| &nbsp;Rooijakkers&nbsp;
 				div.navButtons
-					a(href="/me"): div About&nbsp;
-					a(href="/resume"): div Résumé&nbsp;
-					a(href="/projects"): div Projects&nbsp;
+					a(href="/"): div Home
+					a(href="/resume"): div Résumé
+					a(href="/projects"): div Projects
 					br
 					a(href="https://www.facebook.com/lieuwe.rooijakkers", target="_blank"): div Facebook&nbsp;
 					a(href="https://www.twitter.com/LieuweR", target="_blank"): div Twitter&nbsp;
