--- a/css/main.css
+++ b/css/main.css
@@ -2,22 +2,21 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font-family: sans-serif;
+
 	padding: 30px;
 }
 
-::selection {
-	background: #00b079;
-	color: #fff;
+*::selection {
+	background: #00B079;
+	color: white;
 }
-
-::-moz-selection {
-	background: #00b079;
-	color: #fff;
+*::-moz-selection {
+	background: #00B079;
+	color: white;
 }
-
-::-webkit-selection {
-	background: #00b079;
-	color: #fff;
+*::-webkit-selection {
+	background: #00B079;
+	color: white;
 }
 
 a {
@@ -35,11 +34,11 @@ a {
 }
 
 div.sideBar {
-	position: absolute;
+	position: fixed;
+	right: 0;
 	top: 0;
 	bottom: 0;
-	left: calc(35vh + 10px);
-	width: 100%;
+	padding: 30px;
 }
 
 img#headerPhoto {
@@ -54,87 +53,55 @@ div.siteHeader {
 	text-align: right;
 }
 
-a:hover>div.siteHeader>h1 {
-	background-color: #fff;
-	color: #000;
+a:hover > div.siteHeader > h1 {
+	background-color: white;
+	color: black;
 }
 
-div.siteHeader>h1 {
+div.siteHeader > h1 {
 	font-weight: 300;
 	text-transform: uppercase;
 	margin-top: 0;
 	display: inline;
-	background-color: #000;
-	color: #fff;
+
+	background-color: black;
+	color: white;
+
 	font-size: 2em;
-	-webkit-margin-before: .67em;
-	-webkit-margin-after: .67em;
+	-webkit-margin-before: 0.67em;
+	-webkit-margin-after: 0.67em;
 }
 
-div.navButtons>a>div {
+div.navButtons > a > div {
 	margin-top: 4px;
-	background-color: #000;
-	color: #fff;
+	background-color: black;
+	color: white;
 	padding-top: 5px;
 	padding-bottom: 5px;
-	/* text-align:right; */;
-	/* border:1px #fff solid; */;
-	padding: 5px;
+	text-align: right;
+	border: 1px white solid;
 }
 
-div.navButtons>a>div:hover {
-	background-color: #fff;
-	color: #000;
-	border-color: #000;
-}
-
-div#bigHeader {
-	width: auto;
-	background-color: #000;
-	color: #fff;
-	margin-left: -38px;
-	margin-top: -38px;
-	margin-right: -38px;
-	height: 35vh;
-	position: relative;
-	overflow: hidden;
-	min-height: 425px;
-}
-
-div#headerPhoto {
-	background-image: url(https://www.gravatar.com/avatar/763664ead00ca1ed8e12db1d5ad703c5?s=500&amp;d=identicon&amp;r=PG);
-	position: absolute;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	width: 35vh;
-	background-size: cover;
-	background-position: center;
-}
-
-#name {
-	position: absolute;
-	text-transform: uppercase;
-	position: absolute;
-	bottom: -16px;
-	left: 40px;
-	font-size: 4em;
+div.navButtons > a > div:hover {
+	background-color: white;
+	color: black;
+	border-color: black;
 }
 
 div.content {
-	width: 100%;
+	width: calc(100% - 250px);
 	overflow-x: hidden;
 }
 
 @media only screen and (max-width: 760px) {
 	body {
-		padding-top:0;
+		padding-top: 0;
 	}
 
 	div.sideBar {
 		position: relative;
 		width: 100%;
-		padding: 0;
+		padding: 0px;
 		margin-bottom: 30px;
 	}
 
@@ -143,7 +110,7 @@ div.content {
 	}
 
 	div.siteHeader {
-		margin-top: 0;
+		margin-top: 0px;
 	}
 
 	div.content {
