--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,7 @@ block pageHeader
 
 block content
 	each post, i in posts
-		a(href="/post/#{post.title}")
+		a(href=`/post/${post.title}`)
 			div.post
 				h2 #{post.title}
 				h3 #{post.creation}
