remove some dead stuff

--- a/views/main.pug
+++ b/views/main.pug
@@ -42,7 +42,7 @@ html(lang="en")
 					br
 					a(href="https://www.facebook.com/lieuwe.rooijakkers", target="_blank"): div Facebook&nbsp;
 					a(href="https://www.twitter.com/LieuweR", target="_blank"): div Twitter&nbsp;
-					a(href="https://plus.google.com/+LieuweRooijakkers", target="_blank"): div Google+&nbsp;
+					a(href="https://maly.io/@LieuweR", target="_blank"): div Mastodon&nbsp;
 					a(href="https://www.github.com/Lieuwex", target="_blank"): div Github&nbsp;
 					a(href="https://keybase.io/lieuwer", target="_blank"): div Keybase&nbsp;
 					a(href="https://matrix.to/#/@lieuwex:matrix.org", target="_blank"): div Matrix&nbsp;
@@ -53,5 +53,3 @@ html(lang="en")
 				h1.pageHeader
 					block pageHeader
 				block content
-
-		a(href="https://plus.google.com/+LieuweRooijakkers", rel="publisher")
