projects: add whapp-irc

--- a/views/projects.pug
+++ b/views/projects.pug
@@ -10,6 +10,10 @@ block pageHeader
 	| Projects
 
 block content
+	a(href="https://github.com/lieuwex/whapp-irc")
+		div.project
+			div.projectTitle whapp-irc
+			div.projectBack(style="background-image: url('/whapp-irc.png'); background-position: center top;")
 	a(href="http://www.ceramicarts.nl/")
 		div.project
 			div.projectTitle Gerda van den Bergh-Arents
