--- a/views/main.pug
+++ b/views/main.pug
@@ -36,18 +36,18 @@ html(lang="en")
 							br
 							| &nbsp;Rooijakkers&nbsp;
 				div.navButtons
-					a(href="/me"): div About&nbsp;
-					a(href="/resume"): div Résumé&nbsp;
-					a(href="/projects"): div Projects&nbsp;
+					a(href="/me"): div About
+					a(href="/resume"): div Résumé
+					a(href="/projects"): div Projects
 					br
-					a(href="https://www.facebook.com/lieuwe.rooijakkers", target="_blank"): div Facebook&nbsp;
-					a(href="https://www.twitter.com/LieuweR", target="_blank"): div Twitter&nbsp;
-					a(href="https://maly.io/@LieuweR", target="_blank"): div Mastodon&nbsp;
-					a(href="https://www.github.com/Lieuwex", target="_blank"): div Github&nbsp;
-					a(href="https://keybase.io/lieuwer", target="_blank"): div Keybase&nbsp;
-					a(href="https://matrix.to/#/@lieuwex:matrix.org", target="_blank"): div Matrix&nbsp;
-					a(href="mailto:lieuwerooijakkers@gmail.com", target="_blank"): div Mail&nbsp;
-					a(href="/pgp", target="_blank"): div PGP key&nbsp;
+					a(href="https://www.facebook.com/lieuwe.rooijakkers", target="_blank"): div Facebook
+					a(href="https://www.twitter.com/LieuweR", target="_blank"): div Twitter
+					a(href="https://maly.io/@LieuweR", target="_blank"): div Mastodon
+					a(href="https://www.github.com/Lieuwex", target="_blank"): div Github
+					a(href="https://keybase.io/lieuwer", target="_blank"): div Keybase
+					a(href="https://matrix.to/#/@lieuwex:matrix.org", target="_blank"): div Matrix
+					a(href="mailto:lieuwerooijakkers@gmail.com", target="_blank"): div Mail
+					a(href="/pgp", target="_blank"): div PGP key
 		section
 			div.content
 				h1.pageHeader
