--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,11 @@ div.siteHeader {
 	text-align: right;
 }
 
+a:hover>#headerPhoto {
+	/* this will probably just look weird on different pictures than the current
+	 * one... */
+	filter: brightness(150%) contrast(500%) grayscale(100%);
+}
 a:hover > div.siteHeader > h1 {
 	background-color: white;
 	color: black;
@@ -76,8 +81,9 @@ div.navButtons > a > div {
 	margin-top: 4px;
 	background-color: black;
 	color: white;
-	padding-top: 5px;
-	padding-bottom: 5px;
+
+	padding: 5px;
+
 	text-align: right;
 	border: 1px white solid;
 }
